--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -225,7 +225,226 @@
     </section> <!-- end Week n section //>
     -->
 
-    
+    <section class="news bg-light-gray">  <!-- begin Week 3 section -->
+        <div class="container">
+            <h2>Week 3</h2>
+            <h4>Loops</h4>
+            <p>
+                What's your favorite color? Ours is <span style="color: green;">green</span>, of course! Perhaps you're a <span style="color: hotpink;">pink</span> person, or a <span style="color: purple;">purple</span> lover, or a fan of <span style="color: blue;">blue</span>; no matter your style, we can agree color makes life more exciting! This week, our students moved beyond the world of black and white to incorporate a whole rainbow of colors in their creations with code.
+            </p>
+            <p>
+                Before we dive into a full recap of our meeting, we've got a few key announcements to share.
+            </p>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Announcements</h4>
+            <ul>
+                <h4>1. Bonus Hour</h4>
+                <p>
+                    We'll be continuing to host a Bonus Hour every Thursday from 7-8p ET, and invite all Technovation participants to join us. At least two Technovation mentors will be available on Zoom during the bonus hour to resolve technical difficulties, dive deeper into the coding concepts we've learned, or to talk about computer science in general! Join us at the link below:
+                </p>
+                <ul>
+                    <li style="list-style: disc">Bonus Hour Zoom: <a href=" https://msu.zoom.us/j/92645747814"> zoom</a> (password: see email)</li>
+                </ul>
+                <h4>2. Curriculum Check-In</h4>
+                <p>
+                    We've moved quickly in the first three weeks of Technovation! To make sure everyone's feeling comfortable with the content we've covered so far, we'll be dedicating this Saturday's lesson to review and practice. If you missed a previous week's lesson or are feeling behind, hang in there and join us this Saturday. We'll make sure you're caught up before diving into anything new&mdash;no Technovator will be left behind!
+                </p>
+
+                <h4>3. Looking Ahead</h4>
+                <p>
+                    We'll see you again this Saturday, 10/15 at 10:30a ET for our fourth Technovation meeting of the fall! Zoom links will be the same as those used last week&mdash;we will send them out again on Saturday morning if you've lost them. Looking further ahead, we'll be meeting every Saturday through 11/20 at 10a ET.
+                </p>
+                <h4>4. Questions?</h4>
+                <p>
+                    As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                </p>
+            </ul>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Meeting Recap</h4>
+            <p>
+                Our In-Person students kicked-off Saturday's with a preview of all that's possible in the wide world of computer science through this week's spotlight video. Interviews with Bill Gates, Will. I. Am., Mark Zuckerberg, and others underscored the importance of learning to code in 2022!
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-12" align="middle">
+                        <iframe width="728" height="548" src="https://www.youtube.com/embed/nKIu9yen5nc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <p><i>What's the big deal around computer science? Hear for yourself!</i></p>
+                </div>
+            </div>
+            <p>
+                Our Virtual students kicked off this week's meeting by discussing our favorite things about Halloween, sharing our favorite parts of the spooky month!
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-3" align="middle">
+                        <img class="shadow-lg" src="assets/img/week3/icebreaker.png" width=95%>
+                    </div>
+                </div>
+                <br>
+            </div>
+            <p>
+                After <b>In-Person Technovation</b> had a brief recap of the programming concepts we've learned from previous weeks&mdash;including basic commands like circle, forward, backward, left, and right and other commands like color, pensize, begin_fill, end_fill, setposition, and speed we moved on to variables and user-input!
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week3/variables2.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week3/variables3.png" width=90%>
+                    </div>
+                </div><br>
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week3/userinput1.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week3/userinput2.png" width=90%>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <p><i>Students learned how to assign a value to a variable and the rules for naming variables. Students also learned how to use variables to save user input with text and numbers</i></p>
+                </div>
+            </div>
+
+            <p>
+                After <b>Virtual Technovation</b> had a brief recap of the programming concepts we've learned from previous weeks&mdash;including basic movement commands, variables and user-input&mdash;we introduced loops.
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week3/loops1.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week3/loops2.png" width=90%>
+                    </div>
+                </div><br>
+                <br>
+                <div class="row">
+                    <p><i>Students learned how to make shapes and create dashed lines using loops. After reviewing Tracy's movement, students' had a blast implementing their for-loops!</i></p>
+                </div>
+            </div>
+            <p>
+                Despite the fast pace of Saturday's lesson, students and mentors slowed down towards the end of the meeting for an insightful reflection and discussion. We agreed it would benefit us all to dedicate this coming Saturday to review, as it's key we feel comfortable with loops, colors, variables and input before moving further ahead in our curriculum! If your student felt challenged or behind at last week's meeting, let them know they'll have plenty of time to get caught up this week&mdash;no Technovator will be left behind!
+            </p>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Mentor Spotlight</h4>
+            <p>
+                Technovation is led, organized, and run by MSU students under the guidance of advisors from MSU and Ford. This week, we'd like to introduce three mentors in our Green Cohort, Jisha Goyal, Sammy Guo, and Christina Tagay!
+            </p>
+
+            <!------------------------------------------>
+
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-4" align="middle"> <!-- Jisha -->
+                        <img class="shadow-lg" src="assets/img/photos/JishaGoyal.jpg" width=70%>
+                        <br><br>
+                        <p><i>Jisha Goyal (Virtual Green Cohort Mentor)</i></p>
+                    </div>
+                    <div class="col-md-4" align="middle"> <!-- Sammy -->
+                        <img class="shadow-lg" src="assets/img/photos/sammyhead.jpg" width=70%>
+                        <br><br>
+                        <p><i>Sammy Guo (Virtual Green Cohort Mentor)</i></p>
+                    </div>
+                    <div class="col-md-4" align="middle"> <!-- Najiha -->
+                        <img class="shadow-lg" src="assets/img/photos/christina.jfif" width=70%>
+                        <br><br>
+                        <p><i>Christina Tagay (Virtual Green Cohort Mentor)</i></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4" align="left"> <!-- Kristina -->
+                        <p>
+                            <b>What are you studying?</b><br>
+                            I'm a second-year student majoring in Computer Science!
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I have always been fascinated with coding&mdash;ever since I was in middle school.
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            For a school project, I created an MSU tuition calculator which I thought was really cool.
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            In the future, I hope to be a part of coding for games because I find that very fascinating.
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Don't give up! It's okay to get frustrated sometimes&mdash;but if you are truly passionate about something, don't let anything stop you from reaching your goals.
+                        </p>
+                    </div>
+                    <div class="col-md-4" align="left"> <!-- Sanaye -->
+                        <p>
+                            <b>What are you studying?</b><br>
+                            I'm a first-year student majoring in Computer Science and minoring in business!
+                            
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I took AP Computer Science A in high school which I really enjoyed, and I participated in Kode With Klossy over the summer which was a lot of fun.
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            I developed an iOS app that gives users different dessert recipes based on a region of the world they choose, which can help them learn about different food around the world!
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            I hope to get more into machine learning research.
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Don't be afraid to ask questions. There is no such thing as a stupid question!
+                        </p>
+                    </div>
+                    <div class="col-md-4" align="left"> <!-- Najiha -->
+                        <p>
+                            <b>What are you studying?</b><br>
+                            I'm a second-year student majoring in Computer Engineering!
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I did Girls Who Code in high school and knew I absolutely had to learn more!
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            The first project I ever coded was an animation that became a virtual going away present to one of my teachers who was retiring.
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            I hope to keep getting better at coding in the future so that I can introduce it to more people.
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            The one thing that is better than having a passion is having the courage to share your passion with others.
+                        </p>
+                    </div>
+                </div><br>
+            </div>
+            <p>
+                October's going by fast, but there's no need to be spooked&mdash;time flies when you're having fun! We look forward to seeing everyone on Saturday for Week 4.
+            </p>
+            <p>
+                -The Technovation Team
+            </p>
+        </div>
+
+        </div>
+    </section> <!-- end Week 3 section -->
+
     <section class="news bg-white">  <!-- begin Week 2 section -->
         <div class="container">
             <h2>Week 2</h2>
