week3draft-fixestosite

--- a/technovation/Fall2022/current.html
+++ b/technovation/Fall2022/current.html
@@ -283,11 +283,13 @@
             <p>
                 Check out what students accomplished in prior offerings of Technovation.
             </p>
-            <h4><a href="Fall2020/index.html" target="_blank">Fall 2020 Technovation</a></h4>
+            <h4><a href="https://msu-cse-outreach.github.io/technovation/Fall2021/index.html" target="_blank">Fall 2021 Technovation</a></h4>
 
-            <h4><a href="Fall2019/index.html" target="_blank">Fall 2019 Technovation</a></h4>
+            <h4><a href="https://msu-cse-outreach.github.io/technovation/Fall2020/index.html" target="_blank">Fall 2020 Technovation</a></h4>
 
-            <h4><a href="Fall2018/index.html" target="_blank">Fall 2018 Technovation</a></h4>
+            <h4><a href="https://msu-cse-outreach.github.io/technovation/Fall2019/index.html" target="_blank">Fall 2019 Technovation</a></h4>
+
+            <h4><a href="https://msu-cse-outreach.github.io/technovation/Fall2018/index.html" target="_blank">Fall 2018 Technovation</a></h4>
 
         </div> <!-- /.container -->
     </section> <!-- end of prior club section -->
