--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -228,9 +228,9 @@
     <section class="news bg-light-gray">  <!-- begin Week 3 section -->
         <div class="container">
             <h2>Week 3</h2>
-            <h4>Loops</h4>
+            <h4>Time is moving fast!</h4>
             <p>
-                What's your favorite color? Ours is <span style="color: green;">green</span>, of course! Perhaps you're a <span style="color: hotpink;">pink</span> person, or a <span style="color: purple;">purple</span> lover, or a fan of <span style="color: blue;">blue</span>; no matter your style, we can agree color makes life more exciting! This week, our students moved beyond the world of black and white to incorporate a whole rainbow of colors in their creations with code.
+                This week Virtual and In-Person Cohorts had a bit of a different pace learning all about variables, inputs, and loops!
             </p>
             <p>
                 Before we dive into a full recap of our meeting, we've got a few key announcements to share.
@@ -358,14 +358,14 @@
                         <br><br>
                         <p><i>Sammy Guo (Virtual Green Cohort Mentor)</i></p>
                     </div>
-                    <div class="col-md-4" align="middle"> <!-- Najiha -->
+                    <div class="col-md-4" align="middle"> <!-- Christina -->
                         <img class="shadow-lg" src="assets/img/photos/christina.jfif" width=70%>
                         <br><br>
                         <p><i>Christina Tagay (Virtual Green Cohort Mentor)</i></p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4" align="left"> <!-- Kristina -->
+                    <div class="col-md-4" align="left"> <!-- Jisha -->
                         <p>
                             <b>What are you studying?</b><br>
                             I'm a second-year student majoring in Computer Science!
@@ -387,7 +387,7 @@
                             Don't give up! It's okay to get frustrated sometimes&mdash;but if you are truly passionate about something, don't let anything stop you from reaching your goals.
                         </p>
                     </div>
-                    <div class="col-md-4" align="left"> <!-- Sanaye -->
+                    <div class="col-md-4" align="left"> <!-- Sammy -->
                         <p>
                             <b>What are you studying?</b><br>
                             I'm a first-year student majoring in Computer Science and minoring in business!
@@ -410,7 +410,7 @@
                             Don't be afraid to ask questions. There is no such thing as a stupid question!
                         </p>
                     </div>
-                    <div class="col-md-4" align="left"> <!-- Najiha -->
+                    <div class="col-md-4" align="left"> <!-- Christina -->
                         <p>
                             <b>What are you studying?</b><br>
                             I'm a second-year student majoring in Computer Engineering!
