--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -266,7 +266,7 @@
 
             <h4 class="text-center">Meeting Recap</h4>
             <p>
-                Our In-Person students kicked-off Saturday's with a preview of all that's possible in the wide world of computer science through this week's spotlight video. Interviews with Bill Gates, Will. I. Am., Mark Zuckerberg, and others underscored the importance of learning to code in 2022!
+                Our <b>In-Person students</b> kicked-off Saturday's with a preview of all that's possible in the wide world of computer science through this week's spotlight video. Interviews with Bill Gates, Will. I. Am., Mark Zuckerberg, and others underscored the importance of learning to code in 2022!
             </p>
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
@@ -280,7 +280,7 @@
                 </div>
             </div>
             <p>
-                Our Virtual students kicked off this week's meeting by discussing our favorite things about Halloween, sharing our favorite parts of the spooky month!
+                Our <b>Virtual</b> students kicked off this week's meeting by discussing our favorite things about Halloween, sharing our favorite parts of the spooky month!
             </p>
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
