--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -368,30 +368,25 @@
                     <div class="col-md-4" align="left"> <!-- Jisha -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a second-year student majoring in Computer Science!
+                            I'm a first-year student majoring in Computer Science!
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            I have always been fascinated with coding&mdash;ever since I was in middle school.
-                        </p>
+                            I attended a seminar about computer science and then decided to join a boot camp that interested me in computer science.                         </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            For a school project, I created an MSU tuition calculator which I thought was really cool.
-                        </p>
+                            During my internship, I debugged a Netflix clone and added a new history feature for the customers.                         </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            In the future, I hope to be a part of coding for games because I find that very fascinating.
-                        </p>
+                            I want to further study AI.                         </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            Don't give up! It's okay to get frustrated sometimes&mdash;but if you are truly passionate about something, don't let anything stop you from reaching your goals.
-                        </p>
+                            Think before you code; you always got to visualize what your output should be before coding.                         </p>
                     </div>
                     <div class="col-md-4" align="left"> <!-- Sammy -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a first-year student majoring in Computer Science and minoring in business!
-                            
+                            I'm a first-year student majoring in Computer Science!   
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
@@ -433,6 +428,33 @@
                         </p>
                     </div>
                 </div><br>
+                <div class="row">
+                    <div class="col-md-12" align="middle"> <!-- Ashley -->
+                        <img class="shadow-lg" src="assets/img/photos/ashley.jfif" width=25%>
+                        <br><br>
+                        <p><i>Ashley Arciniega (Lead Green Cohort Mentor)</i></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12" align="left"> <!-- Ashley -->
+                        <p>
+                            <b>What are you studying?</b><br>
+                            Fifth year Double Bachelor- Computer Science and Media and Information
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I had a friend who said he thought I would be good at it due to the way I think and solve problems! He was right and changed my life.                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            I helped create the UI/UX developers brand design site for a big advertisement company.                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            I want to create custom websites.                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Follow your passions! If you like multiple things, no need to choose, there is almost always a job or career path that will blend them together!                         </p>
+                    </div>
+                </div>
             </div>
             <p>
                 October's going by fast, but there's no need to be spooked&mdash;time flies when you're having fun! We look forward to seeing everyone on Saturday for Week 4.
