Week 3 mentor spotlight

--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -341,93 +341,43 @@
 
             <h4 class="text-center">Mentor Spotlight</h4>
             <p>
-                Technovation is led, organized, and run by MSU students under the guidance of advisors from MSU and Ford. This week, we'd like to introduce three mentors in our Green Cohort, Jisha Goyal, Sammy Guo, and Christina Tagay!
+                Technovation is led, organized, and run by MSU students under the guidance of advisors from MSU and Ford. This week, we'd like to introduce two mentors in our Green Cohort, Jisha Goyal and Ashley Arciniega!
             </p>
 
             <!------------------------------------------>
 
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
-                    <div class="col-md-4" align="middle"> <!-- Jisha -->
-                        <img class="shadow-lg" src="assets/img/photos/JishaGoyal.jpg" width=70%>
+                    <div class="col-md-12" align="middle"> <!-- Jisha -->
+                        <img class="shadow-lg" src="assets/img/photos/JishaGoyal.jpg" width=25%>
                         <br><br>
-                        <p><i>Jisha Goyal (Virtual Green Cohort Mentor)</i></p>
-                    </div>
-                    <div class="col-md-4" align="middle"> <!-- Sammy -->
-                        <img class="shadow-lg" src="assets/img/photos/sammyhead.jpg" width=70%>
-                        <br><br>
-                        <p><i>Sammy Guo (Virtual Green Cohort Mentor)</i></p>
-                    </div>
-                    <div class="col-md-4" align="middle"> <!-- Christina -->
-                        <img class="shadow-lg" src="assets/img/photos/christina.jfif" width=70%>
-                        <br><br>
-                        <p><i>Christina Tagay (Virtual Green Cohort Mentor)</i></p>
+                        <p><i>Jisha Goyal (Green Cohort Mentor)</i></p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4" align="left"> <!-- Jisha -->
+                    <div class="col-md-12" align="left"> <!-- Jisha -->
                         <p>
                             <b>What are you studying?</b><br>
                             I'm a first-year student majoring in Computer Science!
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            I attended a seminar about computer science and then decided to join a boot camp that interested me in computer science.                         </p>
-                        <p>
-                            <b>What's something cool you've done with computer science?</b><br>
-                            During my internship, I debugged a Netflix clone and added a new history feature for the customers.                         </p>
-                        <p>
-                            <b>What are you hoping to do with computer science in the future?</b><br>
-                            I want to further study AI.                         </p>
-                        <p>
-                            <b>What advice do you have for our students?</b><br>
-                            Think before you code; you always got to visualize what your output should be before coding.                         </p>
-                    </div>
-                    <div class="col-md-4" align="left"> <!-- Sammy -->
-                        <p>
-                            <b>What are you studying?</b><br>
-                            I'm a first-year student majoring in Computer Science!   
-                        </p>
-                        <p>
-                            <b>How did you become interested in computer science?</b><br>
-                            I took AP Computer Science A in high school which I really enjoyed, and I participated in Kode With Klossy over the summer which was a lot of fun.
+                            I attended a seminar about computer science and then decided to join a boot camp that interested me in computer science.                        
                         </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            I developed an iOS app that gives users different dessert recipes based on a region of the world they choose, which can help them learn about different food around the world!
+                            During my internship, I debugged a Netflix clone and added a new history feature for the customers.                        
                         </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            I hope to get more into machine learning research.
+                            I want to further study AI.                         
                         </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            Don't be afraid to ask questions. There is no such thing as a stupid question!
+                            Think before you code; you always got to visualize what your output should be before coding.    
                         </p>
                     </div>
-                    <div class="col-md-4" align="left"> <!-- Christina -->
-                        <p>
-                            <b>What are you studying?</b><br>
-                            I'm a second-year student majoring in Computer Engineering!
-                        </p>
-                        <p>
-                            <b>How did you become interested in computer science?</b><br>
-                            I did Girls Who Code in high school and knew I absolutely had to learn more!
-                        </p>
-                        <p>
-                            <b>What's something cool you've done with computer science?</b><br>
-                            The first project I ever coded was an animation that became a virtual going away present to one of my teachers who was retiring.
-                        </p>
-                        <p>
-                            <b>What are you hoping to do with computer science in the future?</b><br>
-                            I hope to keep getting better at coding in the future so that I can introduce it to more people.
-                        </p>
-                        <p>
-                            <b>What advice do you have for our students?</b><br>
-                            The one thing that is better than having a passion is having the courage to share your passion with others.
-                        </p>
-                    </div>
-                </div><br>
+                </div>
                 <div class="row">
                     <div class="col-md-12" align="middle"> <!-- Ashley -->
                         <img class="shadow-lg" src="assets/img/photos/ashley.jfif" width=25%>
